2006-04-13  David Hampton  <hampton@employees.org>

	* src/gnome-utils/window-main-summarybar.c:
	* src/gnome/dialog-commodities.c:
	* src/engine/engine.scm:
	* src/engine/commodity-table.scm:
	* src/engine/gnc-commodity.c:
	* src/app-utils/options.scm: Finish cleaning up old uses of
	NS_ISO. Use the C is_currency function for both C and Scheme
	calls.

	* src/import-export/qif-import/druid-qif-import.c:
	* src/import-export/binary-import/druid-commodity.c:
	* src/import-export/ofx/gnc-ofx-import.c:
	* src/import-export/hbci/druid-hbci-initial.c:
	* src/gnome-utils/dialog-preferences.c:
	* src/gnome-utils/gnc-currency-edit.c:
	* src/app-utils/gnc-euro.c:
	* src/app-utils/options.scm:
	* src/app-utils/gnc-ui-util.c: Replace NS_ISO with NS_CURRENCY.
	This substitution was already performed by the called functions,
	so there this change is purely cosmetic.

	* src/gnome-utils/dialog-commodity.c:
	* src/engine/gnc-commodity.[ch]: Added a couple of comments
	related to the change from NS_ISO to NS_CURRENCY.
	
2006-04-13  Andreas Köhler  <andi5.py@gmx.net>

	* src/engine/Group.c: Fix loop of split account reassignments in
	  xaccGroupMergeAccounts, because the commit of one split will
	  change the list itself. Potentially fix 337048.

2006-04-12  David Hampton  <hampton@employees.org>

	* src/engine/gnc-commodity.c: Update the determination of what's a
	currency and what isn't.  Fixes 337804.

2006-04-11  Andreas Köhler  <andi5.py@gmx.net>

	* qofsession.c (qof_session_load): Fix leakage of old books.

2006-04-11  Derek Atkins  <derek@ihtfp.com>

	* lib/libqof/qof/qofbookmerge.c: fix a few memory leaks.

2006-04-10  Derek Atkins  <derek@ihtfp.com>

	* src/import-export/hbci/gnc-hbci-gettrans.c:
	* src/import-export/hbci/gnc-hbci-utils.c:
	  Back out r13752.  We don't need to explicitly #include glib.h
	  because qof.h includes it for us.  Besides, it doesn't fix
	  the whole problem.

	* lots of files:
	  Revert r13749.  Wedon't need to explicitly #include glib.h